Enable oauth protection